# task-timer

./: .gitignore  DESIGN.md  README.md  config.yaml  dummy_outlook.csv  main.py  main_mac_test.py  pyproject.toml  time_log.csv
debug/: test_outlook.py
src/task_timer/: __init__.py  __main__.py  app.py  models.py
src/task_timer/db/: __init__.py  _converters.py  connection.py  repository.py  schema.py
src/task_timer/db/repositories/: __init__.py  aggregates.py  base.py  phases.py  projects.py  system.py  tasks.py  time_logs.py  tree.py
src/task_timer/ui/: format_helpers.py  kanban_window.py  manager_window.py  theme.py  timer_window.py
src/task_timer/ui/widgets/: __init__.py  deadline.py  estimate.py  memo.py  phase_column.py  task_card.py  time_logs_dialog.py  totals_dialog.py
