[project]
name = "task-timer"
version = "0.1.0"
description = "Personal time-tracking & focus tool (Project → Phase → Task)"
readme = "README.md"
authors = [
    { name = "ITO", email = "holpitasu3618@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.11.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
task-timer = "task_timer:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
